vuejs/vuejs-tests/testData/highlighting/componentsNamedLikeHtmlTags.vue
<template>
  <Input><span slot="prepend"></span></Input>
  <col>
  <Col></Col>
  <Col>
<error descr="Element Col is not closed"><</error>/template>
<script lang="es6">
  export default {
    components: {
      Col: {},
      Input: {}
    }
  }
</script>